--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Jakub Strzępka - Recruitment task</title>
+    <meta
+      name="description"
+      content="Recruitment task - GravityGlobal, Beach, Article"
+    />
+    <meta name="author" content="Jakub Strzępka" />
+    <meta name="keywords" content="article" />
+
+    <meta property="og:title" content="Jakub Strzępka - Recruitment task" />
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:description"
+      content="Recruitment task - GravityGlobal, Beach, Article"
+    />
+
     <link rel="stylesheet" href="/src/css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap"
       rel="stylesheet"
     />
-    <script src="/src/js/main.js" defer></script>
+    <script type="module" src="./src/js/main.js" defer></script>
   </head>
   <body>
     <section class="container">
@@ -61,8 +75,8 @@
           />
         </picture>
         <div class="content">
-          <h1>Lorem Ipsum</h1>
-          <p>
+          <h1 class="title">Lorem Ipsum</h1>
+          <p class="description">
             Infinitely scalable, feature-rich and cloud-native data management
             and protection for modern and legacy infrastructures and SaaS
             platforms, managed via a single app with no hardware required.
