--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             "
           />
           <img
+            tabindex="1"
             alt="Sunset on the beach"
             srcset="
               /images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_480.jpg   480w,
@@ -75,13 +76,17 @@
           />
         </picture>
         <div class="content">
-          <h1 class="title">Lorem Ipsum</h1>
-          <p class="description">
+          <h1 class="title" tabindex="2">Lorem Ipsum</h1>
+          <p class="description" tabindex="3">
             Infinitely scalable, feature-rich and cloud-native data management
             and protection for modern and legacy infrastructures and SaaS
             platforms, managed via a single app with no hardware required.
           </p>
-          <button class="popup-button" aria-label="Open popup button">
+          <button
+            class="popup-button"
+            aria-label="Open popup button"
+            tabindex="4"
+          >
             Button
           </button>
         </div>
